fix: button hover on iOS

--- a/packages/core/src/components/button/button.scss
+++ b/packages/core/src/components/button/button.scss
@@ -53,7 +53,14 @@
     &.-action--secondary {
       border-color: helpers.color('border-action');
 
-      &:hover,
+      /* stylelint-disable max-nesting-depth */
+      @media (hover: hover) {
+        &:hover {
+          border-color: helpers.color('border-action-hover');
+        }
+      }
+      /* stylelint-enable max-nesting-depth */
+
       &:active {
         border-color: helpers.color('border-action-hover');
       }
